syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.polypheny.db.protointerface.proto";
option java_outer_classname = "ConnectionRequests";

package polypheny.protointerface;

message ConnectionRequest {
  int32 major_api_version = 1;
  int32 minor_api_version = 2;
  string client_uuid = 3;
  optional string username = 5;
  optional string password = 6;
  optional ConnectionProperties connection_properties = 4;
}

message ConnectionPropertiesUpdateRequest {
  ConnectionProperties connection_properties = 4;
}

message ConnectionProperties {
  optional bool is_auto_commit = 1;
  optional string namespace_name = 2;
}

message DisconnectRequest {
}

message ConnectionCheckRequest {
}
